--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,7 @@
     --text-highlight: #b3b9ff;
     --title: #2e384d;
     --red: #e83f5b;
+    --red-dark: #d3354f;
     --green: #4cd62b;
     --green-dark: #44c324;
     --blue: #5965e0;
